Tests/Pos/SubTyping/tuple_subtype0.p
main machine Entry {
    var a:(any, any);
    start state dummy {
        entry {
            a = (1, 1);
        }
    }
}
